{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 53,
  "lineage": "8e7a3fdc-8b4b-2947-f2eb-1fb4f99ce937",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "NUMBER1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:859993464981:instance/i-02795bff7c107317b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02795bff7c107317b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "holiday-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063957728112fcc1f",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-34-227-87-81.compute-1.amazonaws.com",
            "public_ip": "34.227.87.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab7272925b0d1b31",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005f892595a277045"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01242dcbcb1ea1677",
            "tags": {
              "Name": "NUMBER1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "NUMBER1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005f892595a277045"
            ]
          },
          "dependencies": [
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "NUMBER2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:859993464981:instance/i-0db3cc4ac8be57388",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db3cc4ac8be57388",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "holiday-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a63e536b6994029",
            "private_dns": "ip-10-0-2-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.65",
            "public_dns": "ec2-44-195-83-93.compute-1.amazonaws.com",
            "public_ip": "44.195.83.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fde7fe6582437013",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005f892595a277045"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebe2734e39c8dac1",
            "tags": {
              "Name": "NUMBER2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "NUMBER2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005f892595a277045"
            ]
          },
          "dependencies": [
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "NUMBER3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:859993464981:instance/i-01b52f3a740200c2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b52f3a740200c2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "holiday-vpc",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0367dc59dc8401d12",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "public_dns": "ec2-52-200-173-21.compute-1.amazonaws.com",
            "public_ip": "52.200.173.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09219061f203594bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-005f892595a277045"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01242dcbcb1ea1677",
            "tags": {
              "Name": "NUMBER3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "NUMBER3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005f892595a277045"
            ]
          },
          "dependencies": [
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "miniproject_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:internet-gateway/igw-000f3ce86bceab88c",
            "id": "igw-000f3ce86bceab88c",
            "owner_id": "859993464981",
            "tags": {
              "Name": "miniproject_internet_gateway"
            },
            "tags_all": {
              "Name": "miniproject_internet_gateway"
            },
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "dependencies": [
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "miniproject-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:loadbalancer/app/miniproject-load-balancer/90c78f0163d5a931",
            "arn_suffix": "app/miniproject-load-balancer/90c78f0163d5a931",
            "desync_mitigation_mode": "defensive",
            "dns_name": "miniproject-load-balancer-848198357.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:loadbalancer/app/miniproject-load-balancer/90c78f0163d5a931",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "miniproject-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bb235781b790f3ec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01242dcbcb1ea1677"
              },
              {
                "subnet_id": "subnet-0ebe2734e39c8dac1"
              }
            ],
            "subnets": [
              "subnet-01242dcbcb1ea1677",
              "subnet-0ebe2734e39c8dac1"
            ],
            "vpc_id": "vpc-0f31e1eef689af525",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.NUMBER1",
            "aws_instance.NUMBER2",
            "aws_instance.NUMBER3",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "miniproject-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:listener/app/miniproject-load-balancer/90c78f0163d5a931/85bb0ab23c5a3df1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:listener/app/miniproject-load-balancer/90c78f0163d5a931/85bb0ab23c5a3df1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:loadbalancer/app/miniproject-load-balancer/90c78f0163d5a931",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.NUMBER1",
            "aws_instance.NUMBER2",
            "aws_instance.NUMBER3",
            "aws_lb.miniproject-load-balancer",
            "aws_lb_target_group.miniproject-target-group",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "miniproject-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:listener-rule/app/miniproject-load-balancer/90c78f0163d5a931/85bb0ab23c5a3df1/f8acb31fa3c9d4e5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:listener-rule/app/miniproject-load-balancer/90c78f0163d5a931/85bb0ab23c5a3df1/f8acb31fa3c9d4e5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:listener/app/miniproject-load-balancer/90c78f0163d5a931/85bb0ab23c5a3df1",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.NUMBER1",
            "aws_instance.NUMBER2",
            "aws_instance.NUMBER3",
            "aws_lb.miniproject-load-balancer",
            "aws_lb_listener.miniproject-listener",
            "aws_lb_target_group.miniproject-target-group",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "miniproject-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
            "arn_suffix": "targetgroup/miniproject-target-group/d9d044c7651547ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "miniproject-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "dependencies": [
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "miniproject-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff-20230204122116462900000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
            "target_id": "i-02795bff7c107317b"
          },
          "dependencies": [
            "aws_instance.NUMBER1",
            "aws_lb_target_group.miniproject-target-group",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "miniproject-target-group-attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff-20230204122115550000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
            "target_id": "i-0db3cc4ac8be57388"
          },
          "dependencies": [
            "aws_instance.NUMBER2",
            "aws_lb_target_group.miniproject-target-group",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "miniproject-target-group-attachment3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff-20230204122107414600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993464981:targetgroup/miniproject-target-group/d9d044c7651547ff",
            "target_id": "i-01b52f3a740200c2d"
          },
          "dependencies": [
            "aws_instance.NUMBER3",
            "aws_lb_target_group.miniproject-target-group",
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_security_group.miniproject-security-grp-rule",
            "aws_subnet.miniproject-public-subnet1",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "miniproject-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:network-acl/acl-0d3480c011ceda010",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d3480c011ceda010",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "859993464981",
            "subnet_ids": [
              "subnet-01242dcbcb1ea1677",
              "subnet-0ebe2734e39c8dac1"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.miniproject-public-subnet1",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "miniproject-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:route-table/rtb-05b0e9789560d81b7",
            "id": "rtb-05b0e9789560d81b7",
            "owner_id": "859993464981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000f3ce86bceab88c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "miniproject-route-table-public"
            },
            "tags_all": {
              "Name": "miniproject-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.miniproject_internet_gateway",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "miniproject-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c683aecf31815d3",
            "route_table_id": "rtb-05b0e9789560d81b7",
            "subnet_id": "subnet-01242dcbcb1ea1677"
          },
          "dependencies": [
            "aws_internet_gateway.miniproject_internet_gateway",
            "aws_route_table.miniproject-route-table-public",
            "aws_subnet.miniproject-public-subnet1",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "miniproject-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf5393846f55b1eb",
            "route_table_id": "rtb-05b0e9789560d81b7",
            "subnet_id": "subnet-0ebe2734e39c8dac1"
          },
          "dependencies": [
            "aws_internet_gateway.miniproject_internet_gateway",
            "aws_route_table.miniproject-route-table-public",
            "aws_subnet.miniproject-public-subnet2",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "miniproject-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:security-group/sg-0bb235781b790f3ec",
            "description": "Security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0bb235781b790f3ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "miniproject-load-balancer-sg",
            "name_prefix": "",
            "owner_id": "859993464981",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "miniproject-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:security-group/sg-005f892595a277045",
            "description": "Allow SSH, HTTP and HTTPS inbound traffic for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005f892595a277045",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb235781b790f3ec"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb235781b790f3ec"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "859993464981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "miniproject-security-grp-rule"
            },
            "tags_all": {
              "Name": "miniproject-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.miniproject-load_balancer_sg",
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "miniproject-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:subnet/subnet-01242dcbcb1ea1677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01242dcbcb1ea1677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859993464981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "miniproject-public-subnet1"
            },
            "tags_all": {
              "Name": "miniproject-public-subnet1"
            },
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "dependencies": [
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "miniproject-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:subnet/subnet-0ebe2734e39c8dac1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe2734e39c8dac1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859993464981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "miniproject-public-subnet2"
            },
            "tags_all": {
              "Name": "miniproject-public-subnet2"
            },
            "vpc_id": "vpc-0f31e1eef689af525"
          },
          "dependencies": [
            "aws_vpc.miniproject_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "miniproject_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993464981:vpc/vpc-0f31e1eef689af525",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d766b748ba3a538f",
            "default_route_table_id": "rtb-0abe17e8c3ee08520",
            "default_security_group_id": "sg-0f67e1438a55c2e95",
            "dhcp_options_id": "dopt-0d584eb3d5be4f19c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f31e1eef689af525",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abe17e8c3ee08520",
            "owner_id": "859993464981",
            "tags": {
              "Name": "miniproject_vpc"
            },
            "tags_all": {
              "Name": "miniproject_vpc"
            }
          }
        }
      ]
    }
  ]
}